chore: update menu

--- a/src/content/home.html
+++ b/src/content/home.html
@@ -1,6 +1,11 @@
-<div class="container pt-3" style="max-width: 800px">
-    <h1>Medlunch</h1>
-    <div id="game-list" class="row">
+<div class="container" style="max-width: 800px; min-width: 180px">
+    <nav class="navbar sticky-top bg-success text-white rounded-bottom-3">
+        <div class="container-fluid text-center align-items-center justify-content-center">
+            <h1 class="flex-grow-1">Medlunch⨮</h1>
+            <div>Nourish Your Minds, One Game at a Time!</div>
+        </div>
+    </nav>
+    <div id="game-list" class="row mt-3">
         <div class="d-flex align-items-center">
             <div role="status">Loading game list...</div>
             <div class="spinner-border ms-auto" aria-hidden="true"></div>
