--- a/src/content/ekg-sim.html
+++ b/src/content/ekg-sim.html
@@ -1,2 +1,36 @@
+<link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&display=swap"
+/>
+<link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap"
+/>
+<link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,700,0,0"
+/>
+<link rel="stylesheet" href="/assets/css/core.css" />
+
+<div class="main-wrapper">
+    <div class="main-container">
+        <div class="main-stage" id="stage-login">
+            <div class="login-button">
+                <span class="material-symbols-rounded">play_circle</span>
+                <span class="text">Run EKG Sim</span>
+            </div>
+            <div class="top-bar">
+                <div class="view-all-button">
+                    <span class="material-symbols-rounded">category</span>
+                    <span class="text">Game list</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    var core = {};
+</script>
+<script defer src="/assets/js/core.js"></script>
 <script defer src="/assets/js/ekg-sim/base.js"></script>
-ekg
