chore: fix vh overflow

--- a/src/content/home.html
+++ b/src/content/home.html
@@ -1,8 +1,7 @@
 <div class="container" style="max-width: 800px; min-width: 180px">
-    <nav class="navbar bg-success text-white rounded-bottom-3">
+    <nav class="navbar bg-success text-white rounded mt-3">
         <div class="container-fluid text-center align-items-center justify-content-center">
-            <h1 class="flex-grow-1">Medlunch⨮</h1>
-            <div>Nourish Your Minds, One Game at a Time!</div>
+            <h1 class="flex-grow-1 m-0">Medlunch⨮</h1>
         </div>
     </nav>
     <div id="game-list" class="row mt-3">
