--- a/src/content/ekg-sim.html
+++ b/src/content/ekg-sim.html
@@ -1,10 +1,6 @@
 <link
     rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&display=swap"
-/>
-<link
-    rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&family=Nunito+Sans:wght@400;700&display=swap"
 />
 <link
     rel="stylesheet"
@@ -12,7 +8,7 @@
 />
 <link rel="stylesheet" href="/assets/css/core.css" />
 
-<div class="main-wrapper">
+<div class="main-wrapper start-animation-fade">
     <div class="main-container">
         <div class="main-stage" id="stage-login">
             <div class="login-button">
